force-app/main/default/objects/EJ__c/EJ__c.object-meta.xml
<CustomObject>
    <label>EJ</label>
    <nameField>
        <displayFormat>EJ-{0000000000}</displayFormat>
        <label>EJ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EJs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>