force-app/main/default/objects/EJ__c/fields/EJ_Log__c.field-meta.xml
<CustomField>
    <fullName>EJ_Log__c</fullName>
    <label>EJ Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>